--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 <p>Confira nossos <a href="alunos.html"> alunos</a></p>
 
+<p>Chame seus amigos, pra cada amigo matriculado você ganha 10% de desconto acumulativo até 50% !!</p>
 
     <h2>Informações</h2>
 
