--- a/hidro.html
+++ b/hidro.html
@@ -9,7 +9,7 @@
     <h2>Definição da atividade</h2>
 
     <p>A hidroginástica é um exercício aeróbico feito em piscinas que tem como objetivo a manutenção profilática da saúde. Melhora a capacidade aeróbica, a resistência cardiorrespiratória, a resistência e a força muscular, a flexibilidade, além de proporcionar um gasto calórico de 260 a 400 kcal por hora dependendo da intensidade em que o praticante realiza os exercícios.</p>
-    <p><a href="index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
+
 
     <table border="1">
     <th colspan="2">Dias - Horarios</th>
@@ -29,6 +29,6 @@
       <td>Sex</td><td>18:00-20:00</td>
     </tr>
     </table>
-    <p><a href="../academia birl/index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
+    <p><a href="../index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
   </body>
 </html>
