link retorno pro index

--- a/alunos.html
+++ b/alunos.html
@@ -11,18 +11,17 @@
         <td>Aluno</td><td>Atividade</td>
       </tr>
       <tr>
-        <td><a href="alunos/a1.html">Aluno1</a></td><td>Musculação</td>
+        <td><a href="../alunos/a1.html">Aluno1</a></td><td>Musculação</td>
       </tr>
       <tr>
-        <td><a href="alunos/a2.html">Aluno2</a></td><td>Hidroginastica</td>
+        <td><a href="../alunos/a2.html">Aluno2</a></td><td>Hidroginastica</td>
       </tr>
       <tr>
-        <td><a href="alunos/a3.html">Aluno3</a></td><td>Spinning</td>
+        <td><a href="../alunos/a3.html">Aluno3</a></td><td>Spinning</td>
       </tr>
       <tr>
-        <td><a href="alunos/a4.html">Aluno4</a></td><td>Crossfit</td>
+        <td><a href="../alunos/a4.html">Aluno4</a></td><td>Crossfit</td>
       </tr>
     </table>
-<p><a href="index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
-  </body>
+<p><a href="../index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
 </html>
