index link fix test

--- a/alunos/a4.html
+++ b/alunos/a4.html
@@ -13,6 +13,6 @@
     <p>Crossfit</p>
     <p>Tempo de atividade: 3 anos</p>
 
-    <p><a href="../index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
+    <p><a href="index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
   </body>
 </html>
