--- a/musc.html
+++ b/musc.html
@@ -30,6 +30,6 @@ Esta forma de treinamento físico é utilizada para fins atléticos (por meio da
 </tr>
 </table>
 
-        <p><a href="../academia birl/index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
+        <p><a href="index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
   </body>
 </html>
