--- a/alunos.html
+++ b/alunos.html
@@ -23,5 +23,5 @@
         <td><a href="../alunos/a4.html">Aluno4</a></td><td>Crossfit</td>
       </tr>
     </table>
-<p><a href="../index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
+<p><a href="index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
 </html>
