--- a/cross.html
+++ b/cross.html
@@ -28,6 +28,6 @@
       <td>Sex</td><td>8:00-12:00</td>
     </tr>
     </table>
-    <p><a href="../academia birl/index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
+    <p><a href="index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
   </body>
 </html>
