--- a/hidro.html
+++ b/hidro.html
@@ -29,6 +29,6 @@
       <td>Sex</td><td>18:00-20:00</td>
     </tr>
     </table>
-    <p><a href="../index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
+    <p><a href="index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
   </body>
 </html>
