teste aluno/index

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </tr>
     </table>
 
-<p>Confira nossos <a href="alunos.html"> alunos</a></p>
+<p>Confira nossos <a href="alunos/index.html"> alunos</a></p>
 
 <p>Chame seus amigos, pra cada amigo matriculado você ganha 10% de desconto acumulativo até 50% !!</p>
 
