--- a/alunos/index.html
+++ b/alunos/index.html
@@ -22,6 +22,7 @@
       <tr>
         <td><a href="a4.html">Aluno4</a></td><td>Crossfit</td>
       </tr>
+      <p><a href="../index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
     </table>
 
 </html>
