--- a/alunos/a2.html
+++ b/alunos/a2.html
@@ -13,6 +13,6 @@
     <p>Hidroginastica</p>
     <p>Tempo de atividade: 2 dias </p>
 
-  
+  <p><a href="../index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
   </body>
 </html>
