--- a/alunos/a3.html
+++ b/alunos/a3.html
@@ -13,6 +13,6 @@
     <p>Spinning</p>
     <p>Tempo de atividade: 6 meses</p>
 
-    
+    <p><a href="../index.html">Interessado em outras atividades oferecidas por nós?Confira aqui!</a></p>
   </body>
 </html>
